[gd_scene load_steps=9 format=3 uid="uid://chqwlrbfitpa6"]

[ext_resource type="Texture2D" uid="uid://bptqxp5lrj4yc" path="res://Sprites/castle.jpeg" id="1_23av1"]
[ext_resource type="Script" uid="uid://djcfvsgtw7r0j" path="res://club.gd" id="1_tw7k0"]
[ext_resource type="PackedScene" uid="uid://ddu6trkcxoe8v" path="res://player.tscn" id="2_tw7k0"]
[ext_resource type="PackedScene" uid="uid://djrwlxleqt1y1" path="res://npc/npc.tscn" id="3_tymmd"]
[ext_resource type="Script" uid="uid://co0pmgabnoelo" path="res://phrase_layer.gd" id="6_yfuin"]
[ext_resource type="Texture2D" uid="uid://dkj0lp1itblm0" path="res://icon.svg" id="7_lkv2k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lkv2k"]
size = Vector2(127, 110)

[sub_resource type="Curve2D" id="Curve2D_yfuin"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 200, 160, 0, 0, 0, 0, 496, 176, 0, 0, 0, 0, 912, 184, 0, 0, 0, 0, 448, 264, 0, 0, 0, 0, 744, 304, 0, 0, 0, 0, 496, 376, 0, 0, 0, 0, 824, 440, 0, 0, 0, 0, 200, 504, 0, 0, 0, 0, 368, 616, 0, 0, 0, 0, 520, 536, 0, 0, 0, 0, 776, 616, 0, 0, 0, 0, 960, 544, 0, 0, 0, 0, 504, 368, 0, 0, 0, 0, 392, 376, 0, 0, 0, 0, 400, 296, 0, 0, 0, 0, 200, 160, 0, 0, 0, 0, 490, 203)
}
point_count = 17

[node name="club" type="Node"]
script = ExtResource("1_tw7k0")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -11.0
offset_top = -14.0
offset_right = 1185.0
offset_bottom = 675.0
texture = ExtResource("1_23av1")
expand_mode = 3

[node name="player" parent="." instance=ExtResource("2_tw7k0")]
position = Vector2(582, 639)

[node name="Enemy" parent="." instance=ExtResource("3_tymmd")]
position = Vector2(819, 506)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
light_mask = 2
z_index = 1
position = Vector2(4.5, 11)
shape = SubResource("RectangleShape2D_lkv2k")

[node name="phraseLayer" type="CanvasLayer" parent="Enemy"]
script = ExtResource("6_yfuin")

[node name="phrase" type="Label" parent="Enemy/phraseLayer"]
offset_left = 189.0
offset_top = 548.0
offset_right = 929.0
offset_bottom = 645.0

[node name="speechBackground" type="ColorRect" parent="Enemy/phraseLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -65.0
offset_right = 37.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.8533641, 0.8450494, 0.20472616, 1)

[node name="Sprite2D" type="Sprite2D" parent="Enemy/phraseLayer/speechBackground"]
position = Vector2(76.99999, 52.999985)
scale = Vector2(0.77343756, 0.64453155)
texture = ExtResource("7_lkv2k")

[node name="pathNpc" type="Path2D" parent="."]
position = Vector2(6, -25)
curve = SubResource("Curve2D_yfuin")

[node name="spawnNpc" type="PathFollow2D" parent="pathNpc"]
position = Vector2(200, 160)
rotation = 0.0540015

[connection signal="onPlayerInteraction" from="player" to="." method="_on_player_on_player_interaction"]
[connection signal="onPlayerInteraction" from="player" to="Enemy" method="_on_player_on_player_interaction"]
[connection signal="npcCollision" from="Enemy" to="player" method="_on_enemy_npc_collision"]
